add css-defs.js to caja container.

--- a/test/lib/caja/templates/container.erb
+++ b/test/lib/caja/templates/container.erb
@@ -23,6 +23,7 @@
   <script type="text/javascript" src="assets/log-to-console.js"></script>
   <script type="text/javascript" src="assets/unicode.js"></script>
   <script type="text/javascript" src="assets/html4-defs.js"></script>
+  <script type="text/javascript" src="assets/css-defs.js"></script>
   <script type="text/javascript" src="assets/html-sanitizer.js"></script>
   <script type="text/javascript" src="assets/html-emitter.js"></script>
   <script type="text/javascript" src="assets/domita.js"></script>
@@ -37,7 +38,8 @@
         return ___.simpleFunc(function () { f.apply(console, arguments); });
       })(k, console[k]);
     }
-  })();</script>
+  })();
+  </script>
   
   <div id="base-test" class="test"/></div>
 
